<resources>
    <string name="app_name">LLAPP</string>

    <string name="abc_tab_text_home">首页</string>
    <string name="abc_tab_text_find">发现</string>
    <string name="abc_tab_text_cirle">朋友圈</string>
    <string name="abc_tab_text_function">功能</string>
    <string name="abc_tab_text_set">设置</string>
    <string name="action_settings">Settings</string>

    <string name="sure_save_photo">确定保存图片?</string>
    <string name="existing_picture">图片已存在,请前往</string>
    <string name="look">查看</string>
    <string name="picture_save_faild">图片保存失败</string>
    <string name="exist_picture">图片已存在</string>
    <string name="pictrue_save_succse">图片保存成功</string>
    <string name="tip_download_file">file will be saved to sdcard, the path is: </string>
    <string name="download_notification_title">MeiLiShuo</string>
    <string name="app_status_download">click to download</string>
    <string name="app_status_downloaded">downloaded, click to download again</string>
    <string name="app_status_download_fail">download fail, click to download again</string>


    <string name="language">多语言</string>
    <string name="update">软件升级</string>
    <string name="no_internet">网络连接异常</string>
    <string name="about">关于APP</string>
    <string name="theme_color">主题颜色</string>
    <string name="suggest">建议或意见</string>
    <string name="commit">提交</string>
    <string name="put_suggest">请输入您的建议或意见,我们会在最短的时间内回复您！</string>


    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>

    <!-- 音乐 -->
    <string name="music_no_one">您的手机未找到播放音乐</string>
    <string name="music_list">音乐列表</string>
    <string name="music_singer">歌手名</string>
    <string name="music_song">歌曲名</string>
    <string name="music_list_play">播放列表</string>
    <string name="preparing_card">正在准备SD卡</string>
    <string name="no_storage_card">没有SD卡</string>
    <string name="not_enough_space">没有足够的存储空间</string>
    <string name="battery">电量</string>
    <string name="is_positive">确定</string>
    <string name="music_mode">音乐模式</string>

    <!--分享-->
    <string name="share_to">分享到</string>
    <string name="wechat_friends">微信好友</string>
    <string name="wechat_circle">微信朋友圈</string>
    <string name="QQ_text">腾讯QQ</string>
    <string name="QQ_space">QQ空间</string>
    <string name="sms">短信</string>

    <!--友盟-->
    <dimen name="umeng_socialize_pad_window_height">350dip</dimen>
    <dimen name="umeng_socialize_pad_window_width">580dip</dimen>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_weixin_fav_key">微信收藏</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
    <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>

    <string name="umeng_socialize_share">分享</string>

    <string name="umeng_socialize_mail">邮件</string>
    <string name="umeng_socialize_sms">短信</string>
    <string name="umeng_socialize_sina">新浪</string>
    <string name="action_enter_app">进入LLAPP1.0</string>
    <string name="login_help_information">登录账号为18682176281,密码为123</string>
    <string name="coverview_tip">上滑关闭该界面</string>
    <string name="all_rights_reserved">Copyright © 2016-2017 way. All Rights Reserved.</string>
    <string name="setting_about_description">弹指间 心无间</string>


    <string name="menu_share">分享</string>
    <string name="menu_copy_link">复制链接</string>
    <string name="menu_open_with">用浏览器打开</string>
    <string name="open_nav_drawer">打开侧滑菜单</string>
    <string name="close_nav_drawer">关闭侧滑菜单</string>
    <string name="home_search">搜索有福利哦</string>
    <!--友盟-->



    <string name="string_about">由于本人十分喜爱网易云音乐的MD风格界面，所以从网上搜集了一些高仿网易云的资料，因而这里高仿了它的UI。
        \n\n 这里的数据使用的是代码家的https://gank.io和豆瓣APIV2.0的接口。
        \n\n 整体采用Retrofit+RxJava+okHttp的网络加载框架。
        \n\n 我的GitHub：https://github.com/liulei-0911
        \n\n 项目完全开源，如果你觉得不错，请帮忙Star一下吧，或帮忙分享给你的朋友，这是给我们最大的动力与支持，非常感谢！
        </string>

    <string name="string_about_me">
        博客地址: http://blog.csdn.net/liulei823581722
        \邮箱: 823581722@qq.com | 18682176281@163.com
    </string>

    <string name="string_lib">
         com.jcodecraeer:xrecyclerview:1.2.7
        \n com.nineoldandroids:library:2.4.0
        \n com.android.support:appcompat-v7:24.2.1
        \n com.android.support:design:24.2.1
        \n com.github.ronaldsmartin:Material-ViewPagerIndicator:1.0.2
        \n jp.wasabeef:glide-transformations:2.0.1
        \n com.github.QuadFlask:colorpicker:0.0.12
        \n com.jakewharton:butterknife:7.0.1
        \n com.github.bumptech.glide:glide:3.7.0
        \n com.squareup.retrofit2:retrofit:2.1.0
        \n io.reactivex:rxandroid:1.2.1
        \n io.reactivex:rxjava:1.1.6
        \n com.google.code.gson:gson:2.8.0
        \n com.squareup.retrofit2:converter-gson:2.1.0
        \n com.squareup.retrofit2:adapter-rxjava:2.1.0
        \n com.squareup.okhttp3:okhttp:3.0.1
        \n com.squareup.okhttp3:logging-interceptor:3.0.1
    </string>
    <string name="action_clear_chat">清空聊天记录</string>
    <string name="user_header">好友头像</string>
    <string name="circle">朋友圈</string>

    <string name="quick_service_name">QuickService</string>
</resources>
